fixing a glitch with tetromino alignment in some browsers

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ div.taken {
 }
 
 .grid {
-  width: 200px;
+  width: 202px;
   height: 400px;
   display: flex;
   flex-wrap: wrap;
